--- a/_posts/2019-12-24-the-us-narrative-today.html
+++ b/_posts/2019-12-24-the-us-narrative-today.html
@@ -1738,107 +1738,107 @@ stories:
   domain: http://www.timesdaily.com/
   link: https://www.timesdaily.com/sports/year-sees-day-rise-from-unknown-assistant-to-celebrity-coach/image_e2c6481a-12f3-5910-ad49-5ef05cf8ae6a.html
 images:
-- name: old-house-oldhouse-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-purple-storm.jpg
-- name: oldbarn-oldbarn-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-smooth-ride.jpg
-- name: stories-amusement-park-2-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-amusement-park-2-light-dali.jpg
-- name: aws-s3-stories-new-49-127-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-49-127-800-500-0-max-0-1--1.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-ww2-color.jpg
-- name: gypsymosaic-gypsy-eyes-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-purp-paper.jpg
-- name: bf-skinner-old-train-on-tracks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-train-on-tracks.jpg
-- name: oldhouse-granaryfield-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-plentiful.jpg
-- name: school-clouds-church-clouds-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-china-prop.jpg
-- name: stories-new-power-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-power-colorful-blocks.jpg
-- name: aws-s3-mountainlake-mountainlake-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-mountainlake-mountainlake-still.jpg
-- name: braceros-domingo-ulloa-cemetery_36690406946_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-cemetery_36690406946_o.jpg
-- name: containership-containership-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dark-rain.jpg
-- name: oldhouse-oldhouse-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-nazi-poster.jpg
-- name: supreme-court-supremecourt-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-pablo-blue.jpg
-- name: supreme-court-supremecourt-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-atari-asteroids.jpg
-- name: downtown-trucksilo-space-pizza.jpg.-tmp-uploadjpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-space-pizza.jpg.-tmp-uploadjpg
-- name: stories-sf-city-bridge-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-sf-city-bridge-copper-circuit.jpg
-- name: oldhouse-granaryfield-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-rainbow-festival.jpg
-- name: stories-new-old-door-lock-2-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-old-door-lock-2-marcel-duchamp.jpg
-- name: copper-circuit-IMG_7936.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7936.jpg
-- name: hollywood-building-hollywood-building-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-mucha-mult.jpg
-- name: border-fence-border-fence-on-hill-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-constitution.jpg
-- name: stalin-time-downtown-sidewalk-washington.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-downtown-sidewalk-washington.jpg
-- name: white-house-lawn-white-house-window-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dali-two.jpg
-- name: mosaic-face-mosaic-face-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-smoking-cigarette.jpg
-- name: gypsy-wagon-gypsywagon-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-emily-carr.jpg
-- name: bf-skinner-early-computer-bletchley.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-early-computer-bletchley.jpg
-- name: walled-garden-walled-garden-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-internet-numbers.jpg
-- name: stories-granaryfield-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-granaryfield-dali-three.jpg
-- name: window-window-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dali-three.jpg
-- name: bf-skinner-downtown-light-posts.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-downtown-light-posts.jpg
-- name: status-berlin-status-berlin-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-monet-one.jpg
-- name: white-house-whitehouse-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-emily-carr.jpg
-- name: downtown-los-angeles-downtown-la-really-hot.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-really-hot.JPG
-- name: razorcliff-razorcliff-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-deep-connections.jpg
-- name: paris-paris-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-dark-soul.jpg
-- name: ellis-island-ellisisland-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-dark-soul.jpg
-- name: walled-garden-walled-garden-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-dark-dali.jpg
-- name: berlinwall-DSC-0084-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-marcel-duchamp.jpg
-- name: rockingchair-rockingchair.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair.jpg
-- name: machine-road-machine-road-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-atari-asteroids.jpg
-- name: docks-docks-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-dark-soul.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-pablo-blue.jpg
-- name: mistywoods-babyfoot-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-atari-asteroids.jpg
-- name: abe-lincoln-one-pablo-blue-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-pablo-blue-file-00-00-15-87.jpg
-- name: dragon-desert-desert-dragon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon.jpg
-- name: locked-up-steam-lock-up-steam-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-light-dali.jpg
-- name: old-school-house-old-schoolhouse-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-green-zuma.jpg
-- name: berlinwall-DSC-0084-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-really-hot.jpg
-- name: blossombar-dark-soul-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-soul-file-00-00-24-99.jpg
+- name: yosemite-yosemite-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-ww2-color.jpg
+- name: oldhouse-granaryfield-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-nazi-poster.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-wols.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-sand-paper.jpg
+- name: old-barn-old-barn-1500-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-internet-numbers.jpg
+- name: oldsmallboat-oldsmallboat-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-dark-soul.jpg
+- name: school-clouds-church-clouds-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-smoking-cigarette.jpg
+- name: dragon-desert-desert-dragon-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-rainbow-festival.jpg
+- name: flower-barbed-wire-flower-barbed-wire-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-attack-planes.jpg
+- name: berlinwall-DSC-0084-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-bright-sand.jpg
+- name: berlinwall2-berlinwall-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-internet-numbers.jpg
+- name: old-cabin-oldcabin-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-aqua.jpg
+- name: lincoln-memorial-lincolnmemorial-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-really-hot.jpg
+- name: docks-docks-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-constitution.jpg
+- name: old-church-oldchurch-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dark-rain.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-blue-electricity.jpg
+- name: la-muse-chess-in-the-park-with-pigeons.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-chess-in-the-park-with-pigeons.jpg
+- name: stories-new-57-64-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-57-64-800-500-0-max-0--5--5.jpg
+- name: stories-statue-face-open-mouth-blue-circuit-5.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-statue-face-open-mouth-blue-circuit-5.png
+- name: nazi-invasion-IMG_4430.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_4430.jpg
+- name: lincoln-memorial-lincolnmemorial-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-crafty-painting.jpg
+- name: stalin-time-freeway-carss-overpass.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-freeway-carss-overpass.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-blue-electricity.jpg
+- name: crow-crow-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-wols.jpg
+- name: downtown-trucksilo-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-cinnamon-rolls.jpg
+- name: gypsymosaic-gypsy-eyes-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-sunday.jpg
+- name: liberty-back-statue-liberty-back-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-yellow-collage.jpg
+- name: dragon-desert-desert-dragon-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-sand-paper.jpg
+- name: server-cloud-server-racks-clouds-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-umberto-bocc.jpg
+- name: server-cloud-server-racks-clouds-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-circuit-5.jpg
+- name: bluelake-deep-connections-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-deep-connections-file-00-00-38-67.jpg
+- name: aws-s3-stories-machine-road-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-machine-road-copper-circuit.jpg
+- name: la-muse-new-york-city-skyline_36655833162_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-new-york-city-skyline_36655833162_o.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-kandinsky-bv.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-kandinsky-bv.JPG
+- name: ellis-island-ellis-island-room-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-hot-spicy.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-colored-circuits.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-colored-circuits.png
+- name: server-cloud-server-racks-clouds-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-creativity.jpg
+- name: miamibeach-miamibeach-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-oily-mcoilface.jpg
+- name: downtown-trucksilo-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-emily-carr.jpg
+- name: flower-barbed-wire-flower-barbed-wire-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dry-skin.jpg
+- name: stalin-time-british-black-cab-street.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-british-black-cab-street.jpg
+- name: oldhousecars-house-old-cars-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-far-away.jpg
+- name: old-church-oldchurch-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-colorful-dream.jpg
+- name: bf-skinner-seattle-waterfront-ferris-wheel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-seattle-waterfront-ferris-wheel.jpg
+- name: mistywoods-babyfoot-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-dark-soul.jpg
+- name: rain-princess-DSC_0076.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0076.jpg
+- name: windowmountain-window-mountain-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-matrix.jpg
+- name: old-granary-field-granaryfield-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-purp-paper.jpg
+- name: nazi-invasion-old-church_36588495271_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-church_36588495271_o.jpg
+- name: beach-rocks-beach-rocks-currents-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-bright-sand.jpg
+- name: scream-DSC_0002.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0002.jpg
 ---
 The NBA's Showcase Day Christmas Has Arrived.&nbsp;Persons Involved In Sunday Shooting Appear In Court.&nbsp;Scratch Bakery In Phoebus Will Move And Grow.&nbsp;The Latest Editorial Cartoon.&nbsp;Taylor Makes A Point Leading The Bulldogs.&nbsp;Eagles Top South Lafourche.&nbsp;Naval Aviation Leadership Tackles Issues During Boots On Ground.&nbsp;Mobile Sports Betting To Begin In New Hampshire Next Week.&nbsp;
